--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <section class="omnie" id="section3">
     <div class="our-story">
         <h2>O mnie...</h2>
-        <p>Cześć, nazywam się Tomek Komar. Fryzjerstwo to moja pasja. Od ponad 20 lat nieprzerwanie prowadzę swój salon. Wierzę w jedną rzecz: doświadczenie oraz obsługa na wysokim poziomie, to jest to co mnie wyróżnia. Przywiązuje uwagę do detali i chcę by każdy klient wychodził ode mnie zadowolony.
+        <p>Cześć, nazywam się Tomek Komar. Fryzjerstwo to moja pasja. Od ponad 20 lat nieprzerwanie prowadzę swój salon. Wierzę w jedną rzecz: doświadczenie oraz obsługa na wysokim poziomie, to jest to co mnie wyróżnia. Przywiązuję uwagę do detali i chcę by każdy klient wychodził ode mnie zadowolony.
         </p>
     </div>
     <div class="omnie-img">
