--- a/index.html
+++ b/index.html
@@ -96,28 +96,28 @@
         <p>Konsultacja, mycie, masaż głowy, strzyżenie, modelowanie.</p>
     </div>
     <div class="item-2">
-        <video muted loop playsinline autoplay class="video" src="./assets/haircut2-video2.mp4"></video></div></div>
+        <video poster="./assets/thumb-2.jpg" muted loop playsinline autoplay class="video" src="./assets/haircut2-video2.mp4"></video></div></div>
     <div class="uslugi-items"><div class="item-1">
         <h2>Strzyżenie damskie - od <span>80zł</span></h2>
         <hr/>
         <p>Konsultacja, mycie, masaż głowy, strzyżenie, modelowanie.</p>
     </div>
     <div class="item-2">
-        <video muted loop playsinline autoplay class="video" src="./assets/women-video.mp4"></video></div></div>
+        <video poster="./assets/thumb-4.jpg" muted loop playsinline autoplay class="video" src="./assets/women-video.mp4"></video></div></div>
     <div class="uslugi-items"><div class="item-1">
         <h2>Strzyżenie brody - od <span>50zł</span></h2>
         <hr/>
         <p>Konsultacja, mycie, strzyżenie, modelowanie.</p>
     </div>
     <div class="item-2">
-        <video muted loop playsinline autoplay class="video" src="./assets/beard-video3.mp4"></video></div></div>
+        <video poster="./assets/thumb-1.jpg" muted loop playsinline autoplay class="video" src="./assets/beard-video3.mp4"></video></div></div>
     <div class="uslugi-items"><div class="item-1">
         <h2>Strzyżenie dziecka - od <span>90zł</span></h2>
         <hr/>
         <p>Konsultacja, mycie, masaż głowy, strzyżenie, modelowanie.</p>
     </div>
     <div class="item-2">
-        <video muted loop playsinline autoplay class="video" src="./assets/kid-video.mp4"></video></div></div>
+        <video poster="./assets/thumb-3.jpg" muted loop playsinline autoplay class="video" src="./assets/kid-video.mp4"></video></div></div>
     
     </div>
 
